--- a/vignettes/rockstar_support.Rmd
+++ b/vignettes/rockstar_support.Rmd
@@ -20,27 +20,20 @@ knitr::opts_chunk$set(
 The package currently has XX AST rewriting rules. Here are a list of the
 basic ones.
 
-+-------------+--------------+--------------------+
-| Description | Rockstar     | R                  |
-+=============+==============+====================+
-| Comment     | (Rad         | \# Rad comment     |
-|             | comment)     |                    |
-+-------------+--------------+--------------------+
-| Not         | mysterious   | ?                  |
-| assigned    |              |                    |
-+-------------+--------------+--------------------+
-| Null        | nothing,     | NULL               |
-|             | nowhere,     |                    |
-|             | nobody,      |                    |
-|             | empty, gone  |                    |
-+-------------+--------------+--------------------+
-| True        | right, yes,  | TRUE               |
-|             | ok           |                    |
-+-------------+--------------+--------------------+
-| False       | wrong, no,   | FALSE              |
-|             | lies         |                    |
-+-------------+--------------+--------------------+
-| Assignment  | Put 3 into x | x \<- 3            |
-|             |              |                    |
-|             | Let 3 be x   |                    |
-+-------------+--------------+--------------------+
++--------------+---------------------------------------+----------------+
+| Description  | Rockstar                              | R              |
++==============+=======================================+================+
+| Comment      | (Rad comment)                         | \# Rad comment |
++--------------+---------------------------------------+----------------+
+| Not assigned | mysterious                            | ?              |
++--------------+---------------------------------------+----------------+
+| Null         | nothing, nowhere, nobody, empty, gone | NULL           |
++--------------+---------------------------------------+----------------+
+| True         | right, yes, ok                        | TRUE           |
++--------------+---------------------------------------+----------------+
+| False        | wrong, no, lies                       | FALSE          |
++--------------+---------------------------------------+----------------+
+| Assignment   | Put 3 into x                          | x \<- 3        |
+|              |                                       |                |
+|              | Let 3 be x                            |                |
++--------------+---------------------------------------+----------------+
